update style.css footer-1

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
       <div class="left box3">
         <h2>About</h2>
         <div class="content1">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam voluptate nostrum ad eos esse velit!</p>
+          <p>Chanda Fashion is a readymade business manufactrer of jeans and lower since 2001 .</p>
+          <p>We are here to deliever you comfort,quality and cost.</p>
         <div class="social1">
           <a href="#"><span class="fa fa-facebook"></span></a>
           <a href="https://wa.me/9818512831"><span class="fa fa-whatsapp"></span></a>
@@ -167,7 +168,7 @@
           method="POST" id="my-form">
             <div  class="email">
               <div style="color: black;" class="text">Email *</div>
-              <input type="emai" required  name="_replyto">
+              <input type="email" required  name="_replyto">
             </div>
 
             <div class="msg">
