--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="left box3">
         <h2>About</h2>
         <div class="content1">
-          <p>Chanda Fashion is a readymade business manufactrer of jeans and lower since 2001 .</p>
+          <p>Chanda Fashion is a readymade garment business manufacturer of jeans and lower since 2001 .</p>
           <p>We are here to deliever you comfort,quality and cost.</p>
         <div class="social1">
           <a href="#"><span class="fa fa-facebook"></span></a>
