--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <p>We are here to deliever you comfort,quality and cost.</p>
         <div class="social1">
           <a href="#"><span class="fa fa-facebook"></span></a>
-          <a href="https://wa.me/919818512831"><span class="fa fa-whatsapp"></span></a>
+          <a id="no" href="https://wa.me/919818512831"><span class="fa fa-whatsapp"></span></a>
           <a href="#"><span class="fa fa-instagram"></span></a>
           <a href="tel:9650190110"><span class="fa fa-phone"></span></a>
         </div>
