--- a/index.html
+++ b/index.html
@@ -96,26 +96,26 @@
       <p class="heading">QUESTIONS</p>
       <div class="faqs">
          <details>
-            <summary>What is Lorem ipsum?</summary>
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <summary style="color: black; font-weight: bold;">Where are you widely spread?</summary>
+            <p style="color: #1E3A8A; font-weight: bold;" class="text">We majorly deal in cities like Rajasthan and Maharashtra in depth.</p>
          </details>
          <details>
-            <summary>What is Lorem ipsum?</summary>
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <summary  style="color: black; font-weight: bold;">What do you deliever majorly?</summary>
+            <p style="color: #1E3A8A; font-weight: bold;" class="text">We majorly deal in boys denim and boys lower in variety of sizes.</p>
          </details>
          <details>
-            <summary>What is Lorem ipsum?</summary>
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <summary  style="color: black; font-weight: bold;">Do you deal in retail aspect?</summary>
+            <p style="color: #1E3A8A; font-weight: bold;" class="text">No we only deal in wholesale aspect.</p>
          </details>
 
          <details>
-          <summary>What is Lorem ipsum?</summary>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <summary  style="color: black; font-weight: bold;">What should you expect from us?</summary>
+          <p style="color: #1E3A8A; font-weight: bold;" class="text">You can expect a good quality with comfort and cost feature in trendy jeans or lower you demand from us.</p>
        </details>
 
        <details>
-        <summary>What is Lorem ipsum?</summary>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <summary  style="color: black; font-weight: bold;">How can you contact us?</summary>
+        <p style="color: #1E3A8A; font-weight: bold;" class="text">You can contact us via phone or whatsapp number mentioned on websie.</p>
      </details>
       </div>
    </div>
