--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="right box3">
         <h2>Contact Us</h2>
         <div class="content1">
-          <form class="flex-form"   action="https://formspree.io/f/mbjpzrpr"
+          <form class="flex-form"   action="https://formspree.io/f/xqkgyzwq"
           method="POST" id="my-form">
             <div  class="email">
               <div style="color: black;" class="text">Email *</div>
