--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </p>
          
         <a style="border: 1px solid silver; padding:1rem; border-radius: 10px; " id="btnn" class="btn"  href="https://wa.me/919650190110"><span>CHAT WITH US</span></a>
-        <a   style="border-bottom: 1px solid silver; padding:1rem; border-radius: 10px; " id="btnn" class="btn" href="tel:8586094615"><span>CALL US ON +91 8586094615</span></a> 
+        <a   style="border-bottom: 1px solid silver; padding:1rem; border-radius: 10px; " id="btnn" class="btn" href="tel:8586094615"><span>CALL US ON <br> +91 8586094615</span></a> 
       </div>
 
 
